feat(deck): Add v5 & 2player tags to dekcs